# simple_kfac

./: README.md  pyproject.toml
kfac/: __init__.py  ekfac.py  kfac.py
