[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple_kfac"
version = "0.1.0"
description = "Minimal implementation of Kronecker-factored approximate curvature (K-FAC)"
authors = [
    { name = "Hyounguk Shon", email = "hyounguk.shon@kaist.ac.kr" }
]
dependencies = [
    "torch",
]
# Remove `python` from here, as it's not allowed in the `project` section
# Use the `python-requires` field under `[tool.setuptools]` instead

[project.urls]
homepage = "https://github.com/hushon/simple_kfac"